# rust-agents

./: .gitignore  Cargo.toml  README.mkd
src/: file_sink.rs  main.rs  message_generator.rs  message_recorder.rs  message_recorder_spawner.rs  message_subject_scanner.rs  time.rs
src/message_generator/: message.rs
