[package]
name = "agents"
version = "0.1.0"
authors = ["Boy Maas <boy.maas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.16", features = ["rt-core", "time", "macros", "sync"] }
failure = "0.1.7"
bincode = "1.2.1"
serde = { version = "1.0.106", features = ["derive"] }